--- a/styles.css
+++ b/styles.css
@@ -90,13 +90,27 @@ main {
   top: -38px;
 }
 
-.weather-icon img {
-  max-width: 100%;
+.temperature-icon {
+  font-size: 24px; /* Adjust the size as needed */
+  margin-right: 5px; /* Adjust the spacing as needed */
+  color: #f65282; /* Adjust the color as needed */
 }
 
-.footer {
+.material-icons {
+  font-size: 2em;
+  animation: basicAnimation 0.5s linear ease-in-out infinite alternate;
+  display: inline-block;
+}
+
+@keyframes basicAnimation {
+  0% { transform: scale(1); }
+  100% { transform: scale(1); }
+}
+
+footer {
   border-top: 1px solid #f9f7fe;
   text-align: center;
   padding-top: 15px;
+
   color: rgba(39, 33, 66, 0.4);
 }
