--- a/styles.css
+++ b/styles.css
@@ -91,9 +91,9 @@ main {
 }
 
 .temperature-icon {
-  font-size: 24px; /* Adjust the size as needed */
-  margin-right: 5px; /* Adjust the spacing as needed */
-  color: #f65282; /* Adjust the color as needed */
+  font-size: 24px; 
+  margin-right: 5px; 
+  color: #f65282; 
 }
 
 .material-icons {
@@ -110,7 +110,7 @@ main {
   position: right;
   padding: 5;
   display: inline-block;
-  
+
 }
 footer {
   border-top: 1px solid #f9f7fe;
